	  point to data on the internet, from Jinmei Tatuya (Infoblox).
	- Removed patch comments from acllist.c and msgencode.c
	- Added documentation doc/CNAME-basedRedirectionDesignNotes.pdf,
	  from Jinmei Tatuya (Infoblox).
	- Fix #1125: unbound could reuse an answer packet incorrectly for
	  clients with different EDNS parameters, from Jinmei Tatuya.

17 October 2016: Wouter
	- Re-fix #839 from view commit overwrite.
	- Fixup const void cast warning.

12 October 2016: Ralph
	- Free view config elements.

11 October 2016: Ralph
	- Added qname-minimisation-strict config option.
	- iana portlist update.
	- fix memoryleak logfile when in debug mode.

5 October 2016: Ralph
	- Added views functionality.
	- Fix #1117: spelling errors, from Robert Edmonds.

30 September 2016: Wouter
	- Fix Nits for 1.5.10 reported by Dag-Erling Smorgrav.

29 September 2016: Wouter
	- Fix #838: 1.5.10 cannot be built on Solaris, undefined PATH_MAX.
	- Fix #839: Memory grows unexpectedly with large RPZ files.
	- Fix #840: infinite loop in unbound_munin_ plugin on unowned lockfile.
	- Fix #841: big local-zone's make it consume large amounts of memory.

27 September 2016: Wouter
	- tag for 1.5.10 release
	- trunk contains 1.5.11 in development.
	- Fix dnstap relaying "random" messages instead of resolver/forwarder
	  responses, from Nikolay Edigaryev.
	- Fix #836: unbound could echo back EDNS options in an error response.

20 September 2016: Wouter
	- iana portlist update.
	- Fix #835: fix --disable-dsa with nettle verify.
	- tag for 1.5.10rc1 release.

15 September 2016: Wouter
	- Fix 883: error for duplicate local zone entry.
	- Test for openssl init_crypto and init_ssl functions.

15 September 2016: Ralph
	- fix potential memory leak in daemon/remote.c and nullpointer
	  dereference in validator/autotrust.
	- iana portlist update.

13 September 2016: Wouter
	- Silenced flex-generated sign-unsigned warning print with gcc
	  diagnostic pragma.